[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://title_screen/title/title_scene.gd" type="Script" id=2]

[node name="TitleScene" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -124.0
margin_right = 64.0
margin_bottom = 124.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleImage" type="TextureRect" parent="."]
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 1 )

[node name="NewGameButton" type="Button" parent="."]
margin_top = 132.0
margin_right = 128.0
margin_bottom = 152.0
text = "ui_start_game"

[node name="SettingsButton" type="Button" parent="."]
margin_top = 156.0
margin_right = 128.0
margin_bottom = 176.0
text = "ui_settings"

[node name="TutorialButton" type="Button" parent="."]
margin_top = 180.0
margin_right = 128.0
margin_bottom = 200.0
text = "ui_tutorial"

[node name="CreditsButton" type="Button" parent="."]
margin_top = 204.0
margin_right = 128.0
margin_bottom = 224.0
text = "ui_credits"

[node name="QuitButton" type="Button" parent="."]
margin_top = 228.0
margin_right = 128.0
margin_bottom = 248.0
text = "ui_quit"
